@@ -19,7 +19,12 @@ appended to the current line.
 
     Information at and beyond the first tt(#) on individual lines is removed
 if the tt(rmComment) flag is set to tt(true).  In that case, lines containing
-only blanks and tabs are not stored.
+only blanks and tabs are not stored. Also, if the comment character tt(#) is
+prefixed by a backslash (i.e., tt(\#)) it is not considered comment, but an
+intentional tt(#) character. In the retrieved configuration information it
+appears as a single tt(#) character. If the configuration file should contain
+tt(\#) write tt(\\#), this results in replacing tt(\#) by tt(#), leaving
+tt(\#).
 
 All non-empty lines of the configuration file (when comment is ignored comment
 is not considered to be line-content) are stored in the bf(ConfigFile) object.
