@@ -6,12 +6,15 @@ bobcat (2.22.00)
   * ArgConfig option specifications may now have an optional : appended to
     them.
 
+  * ConfigFile (and ArgConfig) may use \# in configuration files to specify a
+    literal #. The \ is removed from the configuration line.
+
   * Code-cleanup of ArgConfig, adapted argconfig/driver's build script and
     provided an example config file.
 
   * Added missing parameters to ArgConfig's constructors in its man-page.
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 16 Apr 2012 09:24:31 +0200
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 16 Apr 2012 11:50:40 +0200
 
 bobcat (2.21.01)
 
